// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with custom props 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
  editing="true"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
            href="#moreInfos"
          >
            More infos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#timeLine"
          >
            Timeline
          </a>
        </div>
        <!---->
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#pbehavior"
          >
            Pbehaviors
          </a>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <!---->
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with full alarm 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
            href="#moreInfos"
          >
            More infos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#timeLine"
          >
            Timeline
          </a>
        </div>
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#ticketsDeclared"
          >
            Tickets declared
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#pbehavior"
          >
            Pbehaviors
          </a>
        </div>
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#trackSource"
          >
            Track source
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#impactChain"
          >
            Impact chain
          </a>
        </div>
        <!---->
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with gantt 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
            href="#moreInfos"
          >
            More infos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#timeLine"
          >
            Timeline
          </a>
        </div>
        <!---->
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#pbehavior"
          >
            Pbehaviors
          </a>
        </div>
        <!---->
        <!---->
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#entityGantt"
          >
            Gantt chart
          </a>
        </div>
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <!---->
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <!---->
      <!---->
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with required props 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2"
>
  <div
    class="v-tabs__bar theme--dark secondary lighten-1"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
            href="#moreInfos"
          >
            More infos
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#timeLine"
          >
            Timeline
          </a>
        </div>
        <!---->
        <!---->
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
            href="#pbehavior"
          >
            Pbehaviors
          </a>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout pa-3 row"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <!---->
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        />
      </transition-stub>
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
